--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "echarts": "^4.2.1",
     "element-ui": "^2.12.0",
     "mavon-editor": "^2.6.17",
+    "moment": "^2.27.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^7.0.3",
     "vue": "^2.6.10",
