--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.27.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^7.0.3",
+    "vcolorpicker": "^1.0.3",
     "vue": "^2.6.10",
     "vue-count-to": "^1.0.13",
     "vue-router": "^3.0.1",
