--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "echarts": "^4.2.1",
     "element-ui": "^2.12.0",
+    "marked": "^1.2.5",
     "mavon-editor": "^2.6.17",
     "moment": "^2.29.1",
     "node-sass": "^4.13.0",
